wp-content/themes/centennial-houstonzoo/assets/src/scss/_page-home.scss
.page-template-page-home main {
    .carousel-cell {
        opacity: 0;
        transition: opacity 180ms cubic-bezier(0, 1.75, 1, 1.58) !important;
        &.is-selected {
            opacity: 1;
        }
    }

    .home-container {
        position: relative;
        min-height: 100vh;
        display: flex;
        .hero-container {
            position: absolute;
            min-width: 100vw;

            .carousel-main {    
                .flickity-slider {
                    background-color: $darker-green;
                }            
                .carousel-cell {
                    opacity: 0;
                    transition: opacity 1500ms !important;
                    
                    &.is-selected {
                        opacity: 1 !important;
                        transition: opacity 1500ms !important;
                    }

                    .hero-item-container {
                        min-height: 100vh;
                        min-width: 100vw;
                        z-index: 15;
        
                        .title-container {
                            position: absolute;
                            z-index: 15;
                            @include fluid-props(72px, 80px, bottom, 1024px);
                            @include fluid-props(52px, 56px, left, 1024px);
                        }
                    }
                }
            }
        }

        .desc-container {
            position: relative;
            align-self: center;
            @include breakpoint(large) {
                padding-top: rem-calc(192);
                padding-bottom: rem-calc(192);
            }
            // @include fluid-props(440px, 240px, padding-top);
            // @include fluid-props(48px, 240px, padding-bottom);
        }
    }

    .hero-transparent-panel {
        position: absolute;
        width: 100%;
        top: 0;
        bottom: 0;
        opacity: 0.75;
        background: linear-gradient(to top, $green-gradation 15%, rgba(255,255,255,0) 80%);
        @include breakpoint (large) {
            background: linear-gradient(90deg, $green-gradation 10%, rgba(255,255,255,0) 100%);
        }
    }

    .small-home-container {
        position: relative;
        .small-hero-container{
            position: relative;

            .carousel-main {
                z-index: 1;
            }
            .hero-item-container {
                height: rem-calc(392);
                width: 100vw;
                padding-top: rem-calc(332);
                padding-left: rem-calc(32);

                .title-container {
                    position: relative;
                    z-index: 15;
                }
            }

            .small-hero-transparent-panel {
                position: absolute;
                width: 100%;
                top: 0;
                bottom: 0;
                background: linear-gradient(to top, $cyan 6%, rgba(255,255,255,0) 35%);
            }

            .small-hero-darker-panel {
                position: absolute;
                width: 100%;
                top: 0;
                bottom: 0;
                
                background: linear-gradient(to top, #001311 -167%, rgba(255,255,255,0) 80%);
                @include breakpoint (medium) {
                    background: linear-gradient(to top, #001311 -123%, rgba(255,255,255,0) 80%);
                }
            }
        }   

        .small-desc-container {
            padding: 28px 32px 48px 32px;

            .small-content-container {
                position: relative;
                z-index: 15;
            }
        }
    }

    .flickity-page-dots {
        @extend .hide-when-menu-active;
        width: auto;
        text-align: left;
        z-index: 15;
        @include fluid-props(92px, 136px, margin-bottom);
        left: rem-calc(33);
        @include breakpoint (large) {
            @include fluid-props(50px, 56px, left);
            @include fluid-props(110px, 136px, margin-bottom);
        }
        position: absolute;

        .dot {
            @include fluid-props(12px, 16px, height);
            @include fluid-props(12px, 16px, width);
            background-color: transparent;
            opacity: 1;
            border: 1px solid $light-blue;

            &:first-of-type {
                margin-left: 0;
            }
            &.is-selected {
                @extend .bg-color-light-blue;
            }
        }
    }
}

